--- a/src/css/tela2.css
+++ b/src/css/tela2.css
@@ -10,7 +10,7 @@
 
 
 .slide-menor{
-    height: 200px;
+    height: 20vh;
 }
 .slide1{
    
@@ -29,13 +29,11 @@
     border-radius: 30px;
 }
 .heros{
-    padding-bottom: 0.8vh;
     padding-left: 10vw;
     width: 50vw;
 }
 .mySwiper1{
-    padding-bottom: 0.8vh;
-    height: 39vh;
+    height: 34vh;
 }
 
 
@@ -54,10 +52,10 @@
     }
     .mySwiper1{
         padding-bottom: 0.8vh;
-        height: 65vh;
+        height: 43vh;
     }
     .slide-menor{
-        height: 400px;
+        height: 30vh;
     }
 }
 
